--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "php.validate.executablePath": "C:/wamp64_new/bin/php/php7.1.9/php.exe"
+    "php.validate.executablePath": "C:/wamp64/bin/php/php7.2.10",
+    "php.executablePath": "C:/wamp64/bin/php/php7.2.10"
+
 }
